@@ -29,103 +29,6 @@
 
 #define d(x)
 
-gchar *
-dh_util_url_split (const gchar *url, gchar **anchor)
-{
-	gchar   *ch;
-	gchar   *base;
-	guint    len;
-	gchar   *local_anchor = NULL;
-
-	g_return_val_if_fail (url != NULL, NULL);
-	
-	if ((ch = strchr (url, '#'))) {
-		len = ch - url;
-		base = g_strndup (url, len);
-		
-		local_anchor = g_strdup (ch);
-	} else {
-		base = g_strdup (url);
-	}
-	
-	if (anchor) {
-		*anchor = local_anchor;
-		d(g_print ("Anchor %s\n", *anchor));
-	}
-		
-	return base;
-}
-
-gchar *
-dh_util_url_get_book_name (const gchar *url)
-{
-	gchar   **dirs;
-	gchar   **dir;
-	gchar    *name = NULL;
-	
-	dirs = g_strsplit (url, "/", 4);
-	
-	dir = dirs;
-
-	while (*dir && !strcmp (*dir, "..") || !strcmp (*dir, ".")) {
-		++dir;
-	};
-
-	if (*dir) {
-		name = g_strdup (*dir);
-	} 
-	
-	g_strfreev (dirs);
-
-	return name;
-}
-
-gint
-dh_util_url_get_un_depth (const gchar *url)
-{
-	const gchar   *ch;
-	gint           un_depth;
-
-	g_return_val_if_fail (url != NULL, 0);
-
-	ch       = url;
-	un_depth = 0;
-	
-	while (ch = strstr (ch, URL_DELIM)) {
-		un_depth++;
-		ch += URL_DELIM_LENGTH;
-	}
-
-	return un_depth;
-}
-
-gchar *
-dh_util_url_get_anchor (const gchar *url) 
-{
-	gchar   *ch;
-	
-	if ((ch = strchr (url, '#'))) {
-		return g_strdup (ch);
-	}
-
-	return NULL;
-}
-
-gchar *
-dh_util_uri_get_anchor (const GnomeVFSURI *uri)
-{
-	gchar   *str_uri;
-	gchar   *anchor;
-	
-	str_uri = gnome_vfs_uri_to_string (uri, GNOME_VFS_URI_HIDE_NONE);
-
-	anchor = dh_util_url_get_anchor (str_uri);
-
-	g_free (str_uri);
-	
-	return anchor;
-}
-
 /* ----------------------------------------------------------------- */
 /*                          From GNOME VFS                           */
 /* ----------------------------------------------------------------- */
